# quant_platform

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BEGINNER_GUIDE.md  CHECKLIST.md  CLAUDE.md  Dockerfile  INTERVIEW_CHEATSHEET.md  JANE_STREET_GAP_ANALYSIS.md  PRODUCTION_PLAYBOOK.md  PROJECT_SNAPSHOT.md  QMT_STATUS.md  QUANT_JD_ANALYSIS.md  README.md  __init__.py  app.py  docker-compose.yml  m4_backtest.py  main.py  pyproject.toml  requirements.txt  run_baostock.py  run_factor.py  run_slice.py
.github/workflows/: ci.yml  test.yml
.quant_versions/: index.json
.quant_versions/v11/: version.yaml
.quant_versions/v13/: version.yaml
.quant_versions/v28/: version.yaml
.quant_versions/v7/: version.yaml
agent/: __init__.py  research_agent.py  sentiment_factor.py
alpha/: combination.py  ml_signal.py  pipeline.py  regime.py
api/: monitor.py  routes.py  schemas.py
backtest/: capacity.py  cost_model.py  distributed.py  engine.py  metrics.py  tick_engine.py  walkforward.py
compliance/: __init__.py  exporter.py
config/: default.yaml  schema.py
core/: __init__.py  audit.py  context.py  event_bus_v2.py  events.py  instrument.py  message_bus.py  scheduler.py  state_machine.py  store.py
core/protocols/: __init__.py
daemon/: runner.py
data/: ASHARE_PITFALLS.md  board_scanner.py  pipeline.py  quality.py  reliability.py  schema.py
data/providers/: adata_provider.py  baostock_provider.py  base.py  connection_pool.py  fundamental_realtime.py  level2_provider.py  postgres_provider.py  synthetic.py  tushare_loader.py  validated_provider.py  websocket_provider.py
data/reports/: diagnostic_momentum_12m_m2.md  diagnostic_volatility_60d_m2.md  factor_comparison.md  factor_zoo_comparison.md  momentum_honest_run.md  roe_honest_run.md  run_1783764865_e02c4222e2c4013a.md  volatility_60d_honest_run.md
docs/: ABSORPTION_NOTES.md  ALPHA_DISCOVERY_V2_PROTOCOL.md  BROKER_INTEGRATION_SPEC.md  KERNEL_ARCHITECTURE.md  MARKET_STRUCTURE_DISCOVERY_V3_PROTOCOL.md  MILESTONE_1.md  MILESTONE_1_RETROSPECTIVE.md  NO_LOOKAHEAD_CONTRACT.md  OPS_RUNBOOK.md  PRODUCTION_ARCHITECTURE_V1.md  REGIME_DISCOVERY_V4_PROTOCOL.md  REGIME_ROUTER_V1_SPEC.md  RESEARCH_TERMINAL_CONCLUSION.md  RQ6_EXECUTION_AWARE_HORIZON.md  RQ7_SAMPLING_PHASE_DIAGRAM.md  TRADING_SPEC_80D_REVERSAL.md  V11_EXECUTION_ADAPTER_SPEC.md  VALIDATION_REPORT.md  index.html
docs/research/: ABLATION_001_FACTOR_SELECTION.md  ABLATION_002_CORRELATION_CLUSTERING.md  ABLATION_003_CLUSTER_REPRESENTATIVES.md  ALPHA_DISCOVERY_V2_CROSS_VALIDATION.md  ALPHA_DISCOVERY_V2_REPORT.md  MARKET_STRUCTURE_DISCOVERY_V3_REPORT.md  README.md  REGIME_DISCOVERY_V4_REPORT.md  RQ4_WHY_SIGN_FLIP_WORKS.md  RQ5B_HORIZON_ALIGNMENT.md
execution/: __init__.py  algorithms.py  connection.py  engine.py  market_impact.py  models.py  oms.py  order_book.py  paper_broker.py  tca.py
factors/: base.py  candle_patterns.py  evaluation.py  expression_engine.py  factor_timing.py  fundamental.py  ic_monitor.py  network.py  orthogonalization.py  processing.py  registry.py  shareholder.py  technical.py
factors/expressions/: __init__.py  cs_functions.py  math_functions.py  ts_functions.py
factors/store/: __init__.py
framework/: __init__.py
framework/contracts/: __init__.py  broker.py  evaluator.py  factor.py  llm.py  market_data.py  universe.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
kernel/: __init__.py  kernel.py
lab/: __init__.py
lab/registry/: __init__.py
lab/reports/: __init__.py  factor_comparison.py
lab/runs/: __init__.py  first_honest_research_run.py  second_honest_research_run.py  third_honest_research_run.py
monitoring/: grafana_dashboard.json  run_monitor.py
notebooks/: research_workflow.ipynb
operations/: __init__.py  investor.py  nav.py  reconciliation.py
portfolio/: black_litterman.py  constraints.py  covariance.py  optimizers.py  screener.py
regime_router/: __init__.py  adapter.py  router.py  validate.py  validate_adapter.py
reporting/: attribution.py  dashboard.py  html_report.py  performance.py
research/: __init__.py  validation.py
results/: backtest_report.html
risk/: barra.py  circuit_breaker.py  exposure.py  factor_risk.py  financial_health.py  greeks.py  healthcheck.py  lookahead_detector.py  monte_carlo.py  profile_classifier.py  realtime_engine.py  regime.py  safety.py  stop_loss.py  stress.py  time_segment.py  var.py
services/: __init__.py  base.py  data_service.py  execution_service.py  risk_service.py
strategies/: low_vol_quality.yaml  momentum_fundamental.yaml
strategy/: dsl.py  gates.py  multi_strategy.py  portfolio_orchestrator.py  registry.py  research_validation.py
tests/: conftest.py
tests/test_agent/: test_research_agent.py  test_sentiment.py
tests/test_alpha/: test_alpha_pipeline.py  test_combination.py  test_ml_signal.py  test_purged_wf.py
tests/test_api/: test_monitor_api.py
tests/test_architecture/: __init__.py  test_boundaries.py
tests/test_backtest/: test_capacity.py  test_cost_model.py  test_distributed.py  test_metrics.py  test_tick_engine.py  test_walkforward.py
tests/test_compliance/: test_exporter.py
tests/test_core/: test_audit.py  test_event_bus_v2.py  test_events.py  test_instrument.py  test_message_bus.py  test_protocols.py  (+4 more)
tools/: common_runner.py  construction_attribution.py  diagnose_ic.py  diagnose_ic_v2.py  run_ceiling_probe.py  run_cost_test.py  run_market_structure_map_v1.py  run_market_structure_v3.py  run_oos_verification.py  run_probe_phase_aware.py  run_regime_heatmap_v4.py  run_rq1_cluster_attribution.py  run_rq2_cluster_sign_flip.py  run_rq3_stability.py  run_rq5b_horizon_alignment.py  run_rq6_horizon_scan.py  run_rq7_phase_diagram.py  run_rq8_latent_state_probe.py  run_xv_synthetic_vs_real.py  sanity_check.py
trading/: __init__.py  broker.py  engine.py  live_engine.py  live_runner.py  qmt_utils.py  realtime.py  reversal_paper_trader.py  signal_generator.py
utils/: cache.py  config.py  decorators.py  logging.py  metrics.py  numba_accelerator.py  version_manager.py
(+104 files in other folders)
