[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_platform"
version = "0.1.0"
description = "A-Share Multi-Factor Quantitative Trading Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Quant Platform Contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.scripts]
quant = "main:main"

[tool.setuptools.packages.find]
include = ["quant_platform*"]

# ---------------------------------------------------------------------------
# ruff — fast Python linter (replaces flake8 + isort + autoflake)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "T20"]
ignore = [
    "E501",   # line-too-long — handled by formatter
    "E402",   # module-import-not-at-top-of-file — needed for sys.path setup
    "E731",   # lambda-assignment — sometimes clearer
]

[tool.ruff.format]
quote-style = "single"

# ---------------------------------------------------------------------------
# mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = false
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "quant_platform.utils.cyext.*",
    "tushare",
    "baostock",
    "akshare",
    "cvxpy",
    "shap",
    "numba",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning:dateutil.*",
    "ignore::DeprecationWarning:pytz.*",
    "ignore::DeprecationWarning:openpyxl.*",
    "ignore::UserWarning:sklearn.*",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["quant_platform"]
omit = [
    "*/tests/*",
    "*/node_modules/*",
    "*/frontend/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
